services/gitlab/runners/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: gitlab-runners
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gitlab-runners-ingress
  namespace: gitlab-runners
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # GitLab API callbacks
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      ports:
        - protocol: TCP
          port: 443
